K8S-deployment/nginx--ingress-playgroud/nginx-ingress-with-letsencrypt-tls-offloading/kuard-nginx-ingress-with-production-issuer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - sucktls.poker
    secretName: letsencrypt-prod
  rules:
  - host: sucktls.poker
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
