K8S-deployment/nginx--ingress-playgroud/nginx-ingress-with-letsencrypt-tls-offloading/kuard-nginx-ingress-with-staging-issuer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - fuckingtls.com
    secretName: letsencrypt-staging
  rules:
  - host: fuckingtls.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
